--- a/css/x.sandbox.css
+++ b/css/x.sandbox.css
@@ -289,6 +289,32 @@
 }
 
 
+/* Resume CSS */
+
+.bulletList ul {
+  display: flex;
+  list-style-type: circle;
+  grid-area: resume;
+  flex-direction: column;
+  margin: auto;
+  padding-left: 20px;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;  
+}
+
+.bulletList li {
+  display: flex;
+  grid-area: resume;
+  color: #222222;
+  text-align: left;
+  font-size: 14px;
+  font-family: Monts;
+}
+
+
+
 /* Typography CSS */
 
 #aboutGrid .heading {
