--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {     
   margin: 0;
   padding-top: 0px;
+  font-size: 18px;
   background-color: #EEEEEE;  
   font-family: 'Montserrat', sans-serif;
 }
@@ -8,25 +9,25 @@ body {
 
 /* Navigation CSS */
 
-ul {
+.navBar ul {
   list-style-type: none;
   margin: 0;
   padding-left: 20px;
   overflow: hidden;
-  background-color: #EEEEEE;
+  background-color: #222222;
   position: fixed;
   top: 0;
   width: 100%;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.25); /* drop shadow */
 }
 
-li {
+.navBar li {
   float: right;
 }
 
-li a {
+.navBar li a {
   display: inline-block;
-  color: #222222;
+  color: #EEEEEE;
   text-align: center;
   padding-top: 32px;
   padding-bottom: 0px;
@@ -36,7 +37,7 @@ li a {
   font-family: 'Poiret One', cursive;
 }
 
-li a:hover {
+.navBar li a:hover {
     color: #905421;
     font-weight: bold;
   }
@@ -50,7 +51,7 @@ li a:hover {
   padding-top: 50px;
   display: grid;
   grid-template-rows: 300px 300px 300px;
-  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-columns: 20% 60% 20%;
   grid-template-areas: 
   "left logo right"
   "left logo right"
@@ -61,6 +62,7 @@ li a:hover {
   grid-area: left;
   display: flex;
   margin-top: 0px;
+  overflow: hidden;
 }
 
 #rightGraphic {       
@@ -69,7 +71,7 @@ li a:hover {
   align-content: right;
   margin-left: 10px;
   margin-top: 15px;
-  float: right
+  float: right;  
 }
 
 .heroGridArea {
@@ -77,7 +79,7 @@ li a:hover {
   cursor: pointer;
   display: grid;
   grid-template-rows: 300px 300px 300px;
-  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-columns: 20% 60% 20%;
   grid-template-areas:
   "left logo right"
   "left logo right"
@@ -111,15 +113,14 @@ li a:hover {
   }
 }
 
-
 /* About CSS */
 
 #aboutGrid {
   margin: 0px;
   display: grid;
   justify-content: space-between;  
-  grid-template-rows: 200px 200px 300px;
-  grid-template-columns: 2fr 3.5fr 1.5fr;
+  grid-template-rows: 200px 200px 350px;
+  grid-template-columns: 35% 45% 20%;
   grid-template-areas: "hello text null"
                        "hello text null"
                        "resume resume null";  
@@ -128,8 +129,7 @@ li a:hover {
 
 
 .helloContainer img {
-  grid-area: hello;
-  display: inline;
+  grid-area: hello;  
   height: auto;
   float:left !important;
   width: 100%;
@@ -148,7 +148,7 @@ li a:hover {
 }
 
 .aboutGridArea {
-  margin: 5px;
+  margin: 0px;
   cursor: pointer;  
 }
 
@@ -156,12 +156,11 @@ li a:hover {
 /* Work CSS */
 
 .workGrid {     /* CHANGE TO FLEXBOX? */
-  margin: 0px;
-  margin-top: 10px;
+  margin: 0px;  
   display: grid;
   justify-content: center;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25); /* drop shadow */
-  grid-template-rows: 150px 400px 100px;
+  grid-template-rows: 100px 700px 100px;
   grid-template-areas: 
   "heading"
   "slides"
@@ -170,16 +169,17 @@ li a:hover {
 
 
 .slideshowContainer {
-  padding:0.01em 20px;
-  margin:0 -16px;
+  display: inline-flex;
+  padding: 20px;
+  padding-top: 80px;
   grid-area: slides;
 }
 
 .slideCard {
   border: none;
-  padding: 0 8px;
+  padding: 0 6px;
   float: left;
-  width:33%;
+  width:25%;
   grid-area: slides;  
 }
 
@@ -193,7 +193,8 @@ li a:hover {
 .slideOverlay {
   padding: 0px;
   margin: 0px;
-  opacity:0.55;
+  margin-top: -5px;
+  opacity: 65%;
   color:#EEEEEE !important;
   background-color:#222222 !important;
   justify-content: flex-end;  
@@ -206,24 +207,29 @@ li a:hover {
 
 #caseStudyTitle {
   color:#EEEEEE !important;
-  padding-left: 20px;  
-  font-size: 32pt;
+  padding-left: 15px; 
+  padding-top: 10px;
+  margin: 0;
+  font-size: 22pt;
   text-decoration: none;  
   font-family: 'Poiret One', cursive;
 } 
 
 #slideCaption {
   color:#EEEEEE !important;
-  padding-left: 20px;  
-  font-size: 14pt;
+  padding-left: 15px; 
+  padding-top: 10px;
+  margin: 0; 
+  font-size: 10pt;
   text-decoration: none;  
   font-family: 'Montserrat', sans-serif;
 } 
 
 .button{
   border:none;
-  display:inline-block;
+  display:inline-flex;
   padding:8px 16px;  
+  margin-top: 10px;
   margin-left: 16px;
   margin-right: auto;
   margin-bottom:16px!important;  
@@ -245,9 +251,10 @@ li a:hover {
 .contactGrid {
   margin: 0px;
   margin-top: 10px;
+  padding: 60px;
   display: grid;
   justify-content: center;
-  grid-template-rows: 150px 200px 200px;
+  grid-template-rows: 100px 300px 250px;
   grid-template-areas: 
   "contact-heading"
   "text"
@@ -256,10 +263,51 @@ li a:hover {
 
 
 .contactIcons img {
-margin: 30px;
-grid-area: icons;
-margin-bottom: 10px;
+  grid-area: icons;
+  margin: 20px;
 }
+
+/* Resume CSS */
+
+.resumeGrid {
+  display: grid;
+  margin: 0px;
+  padding-top: 50px;
+  grid-template-rows: 150px 1500px 1500px;
+  grid-template-columns: 25% 50% 25%;
+  grid-template-areas: 
+  "left resume right"
+  "left resume right"
+  "left resume right";
+}
+
+.resumeSection{
+  grid-area: resume;
+  margin: 50px;
+  padding-top: 5px;
+  display: grid;
+}
+
+.resumeSection h2{
+  color:#905421;
+  margin: 0px;
+  padding: 0px;
+  font-family: 'Poiret One', cursive;
+}
+
+.resumeSection p{
+  color: #222222;
+  margin: 0px;
+  padding: 0px;
+}
+
+.resumeSection li{
+  color: #222222;
+  margin: 0px;
+  padding: 5px;
+}
+
+
 
 
 /* Typography CSS */
@@ -270,7 +318,7 @@ margin-bottom: 10px;
   font-size: 55px;
   text-align: center;
   vertical-align: top;  
-  margin-bottom: 10px;
+  margin: 40px;
   font-family: 'Poiret One', cursive;
   font-weight: bold; /* KEEP BOLD OR REGULAR WEIGHT? */
 } 
@@ -281,7 +329,9 @@ margin-bottom: 10px;
   font-size: 55px;
   text-align: center;
   vertical-align: top;  
-  margin-bottom: 10px;
+  margin: 40px;
+  margin-top: 80px;
+  margin-bottom: 0px;
   font-family: 'Poiret One', cursive;
   font-weight: bold; /* KEEP BOLD OR REGULAR WEIGHT? */
 } 
@@ -292,7 +342,21 @@ margin-bottom: 10px;
   font-size: 55px;
   text-align: center;
   vertical-align: top;  
-  margin-bottom: 10px;
+  margin: 40px;  
+  margin-bottom: 0px;
+  font-family: 'Poiret One', cursive;
+  font-weight: bold; /* KEEP BOLD OR REGULAR WEIGHT? */
+} 
+
+.heading #resume {
+  grid-area: contact-heading;
+  color: #905421;
+  font-size: 55px;
+  text-align: center;
+  vertical-align: top;  
+  margin: 20px;  
+  margin-top: 70px;
+  margin-bottom: 0px;
   font-family: 'Poiret One', cursive;
   font-weight: bold; /* KEEP BOLD OR REGULAR WEIGHT? */
 } 
@@ -322,11 +386,9 @@ margin-bottom: 10px;
   grid-area: text;
   display: inline;
   align-items: center;
-  width: 90%;
-  margin-left: 10px;
-  margin-top: 10px;
+  width: 95%;
+  margin: 10px;
   color: #222222;
-  font-size: 20px;
   vertical-align: top; /* SHOULD BE ALIGNED TOP & HORIZONTALLY CENTERED */
 }
 
@@ -337,13 +399,23 @@ margin-bottom: 10px;
 }
 
 #contactText { 
-  padding-bottom: 3%
+  padding: 10%;
 }
 
 #contactText p {    
   color: #222222;
-  font-size: 20px;
   text-align: center;  
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #222222;
+  color: #EEEEEE;
+  height: 75px;
+  font-size: 14px;
+  text-align: center;
 }
 
 
