--- a/css/styles.css
+++ b/css/styles.css
@@ -38,11 +38,18 @@ body {
 }
 
 .navBar li a:hover {
-    color: #95B5CD;
+    color: #EEEEEE;
     font-weight: bold;
   }
 
 
+  a.anchor {
+    display: block;
+    position: relative;
+    top: -120px;
+    visibility: hidden;
+}
+  
 
 /* Above Fold CSS */
 
@@ -164,10 +171,11 @@ body {
   grid-template-areas: 
   "heading"
   "slides"
-  "slides";  
+  "dots";  
 }
 
 
+/* SLIDESHOW */
 .slideshowContainer {
   display: inline-flex;
   padding: 20px;
@@ -210,7 +218,7 @@ body {
   padding-left: 15px; 
   padding-top: 10px;
   margin: 0;
-  font-size: 22pt;
+  font-size: 20pt;
   text-decoration: none;  
   font-family: 'Poiret One', cursive;
 } 
@@ -244,7 +252,46 @@ body {
   font-family: 'Montserrat', sans-serif;  
 }
 
+/* position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
 
+/* on hover, add black transparent background */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+  /* dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 13px;
+    width: 13px;
+    margin: 20px 2px;
+    background-color: #AEAEAE;
+    border-radius: 50%;
+    display: flex;
+    transition: background-color 0.6s ease;
+    grid-area: dots;
+  }
+  
+  .active, .dot:hover {
+    background-color: #EEEEEE;
+  }
+  
+    /* fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
 
 /* Contact CSS */
 
